# paper-linter

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
presets/: acl.toml  arxiv.toml  neurips.toml  polish.toml  strict.toml  writing-style.toml
src/: artifacts.rs  baseline.rs  checker.rs  config.rs  diagnostic.rs  discovery.rs  doctor.rs  formatter.rs  lib.rs  output.rs  project.rs  project_graph.rs  rule_policy.rs  suppressions.rs  web_api.rs
src/latex/: aliases.rs  commands.rs  environments.rs  mod.rs  prose.rs  scan.rs  sections.rs  significant.rs
src/rules/: alg001.rs  cap001.rs  cap002.rs  cit007.rs  citations.rs  cmt001.rs  env001.rs  fig001.rs  fig002.rs  fig003.rs  fig004.rs  fig005.rs  fig006.rs  fig007.rs  fig008.rs  fmt001.rs  fmt002.rs  lat001.rs  lat002.rs  lbl001.rs  mod.rs  mth001.rs  mth002.rs  mth003.rs  pkg001.rs  pkg002.rs  prj001.rs  prj002.rs  prj003.rs  prj004.rs  ref001.rs  ref002.rs  sec001.rs  sec002.rs  sec003.rs  sec004.rs  sec005.rs  sec006.rs  syn001.rs  tab001.rs  (+9 more)
src/rules/citations/: bbl.rs  bibtex.rs  latex.rs  paths.rs  similarity.rs  syntax.rs
web/: index.html
web/src/: main.ts  styles.css  types.d.ts
