[package]
name = "paper-linter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.10"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net"] }
zip = "0.6"
