[package]
name = "paper-linter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["native"]
native = ["dep:axum", "dep:clap", "dep:flate2", "dep:reqwest", "dep:tar", "dep:tempfile", "dep:tokio", "dep:zip"]
web = ["dep:wasm-bindgen"]

[dependencies]
axum = { version = "0.7", features = ["multipart"], optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
flate2 = { version = "1.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = { version = "0.4", optional = true }
tempfile = { version = "3.10", optional = true }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
zip = { version = "0.6", optional = true }
