[package]
name = "paper-linter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
web = ["dep:wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
